# TalkingPdf-with-Gemni-API-nextjs-FastAPI-

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt
api/: app.py  index.py  models.py  pyproject.toml  requirements.txt  session.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/(routes)/chat/: page.tsx
src/app/(routes)/play-ground/: page.tsx
src/app/screens/: chatWindow.tsx  pdflist.tsx
