[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-generativeai = "^0.7.2"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.6"
fastapi = "^0.112.1"
sqlmodel = "^0.0.21"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.9"
websockets = "^13.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
